@@ -87,6 +87,7 @@ tests/DCPS/MultiDPTest/run_test.pl: !DCPS_MIN
 tests/DCPS/TransientLocalTest/run_test.pl: !DCPS_MIN
 tests/DCPS/MultiRepoTest/run_test.pl: !DCPS_MIN
 tests/DCPS/MultiRepoTest/run_test.pl fileconfig: !DCPS_MIN
+tests/DCPS/Presentation/run_test.pl: !DCPS_MIN
 tests/DCPS/Reconnect/run_test.pl: !DCPS_MIN
 tests/DCPS/Reconnect/run_test.pl restart_sub: !DCPS_MIN
 tests/DCPS/Reconnect/run_test.pl restart_pub: !DCPS_MIN
