@@ -1,0 +1,17 @@
+//
+// $Id$
+//
+
+project: dcpsexe_with_tcp {
+  exename   = test
+  
+  after    += DcpsFooType
+  libs     += DcpsFooType
+  
+  includes += ../FooType
+  libpaths += ../FooType
+
+  Source_Files {
+    main.cpp
+  }
+}
